slightly stronger support in the discussion section

--- a/docs/7-interviews/77-discussion.tex
+++ b/docs/7-interviews/77-discussion.tex
@@ -14,23 +14,23 @@ are \cite{ben_amer_too_2020,johannsen_municipal_2023,susser_better_2022}
     \item and lack of collaboration between modelers and planners.
 \end{enumerate} 
 Specifying challenges in this way provides a list of issues that can be
-addressed. 
-This list suggests that knowledge deficits are the primary obstacle to the adoption of \acp{esom} at the 
-municipal level. The interviews in this study corroborate that knowledge defecits
-contribute to the disuse of \acp{esom}.
-Unfortunately, the interviews in this study further suggest that even if each
-of these issues were appropriately handled that municipalities would still not
-benefit from the use of energy models. Instead, there are structural barriers to
-the municipal use of energy models. The typical focus of \acp{esom} on national
-and regional energy systems evinces an implicit understanding of these barriers.
-Municipalities can still benefit from mathematical optimization tools as long as
-a municipality has sufficient autonomy over its energy choices to impact the
-decision variables in the model. For example, a municipality that does not own
-its electric utility or any generating resources would not benefit from a
-capacity expansion model that optimizes investments in generating resources. Of
-the municipalities considered in this study, \ac{uiuc} satisfies this condition
-the best and is the most likely to benefit from \acp{esom} in planning
-processes. Indeed, meeting its climate goals might necessitate modeling.
+addressed. This list suggests that knowledge deficits are the primary obstacle
+to the adoption of \acp{esom} at the municipal level. The interviews in this
+study corroborate that knowledge defecits contribute to the disuse of
+\acp{esom}. Unfortunately, the interviews in this study further suggest that
+even if each of these issues were appropriately handled that municipalities
+would still not benefit from the use of energy models. Instead, there are
+structural barriers to the municipal use of energy models. The typical focus of
+\acp{esom} on national and regional energy systems evinces an implicit
+understanding of these barriers. Municipalities can still benefit from
+mathematical optimization tools as long as a municipality has sufficient
+autonomy over its energy choices to impact the decision variables in the model.
+For example, a municipality that does not own its electric utility or any
+generating resources would not benefit from a capacity expansion model that
+optimizes investments in generating resources. Of the municipalities considered
+in this study, \ac{uiuc} satisfies this condition the best and is the most
+likely to benefit from \acp{esom} in planning processes. Indeed, meeting its
+climate goals might necessitate modeling.
 
 Although municipal governments may not be the strongest candidates for energy
 modeling, nonprofits and grassroots organizations could benefit from energy
@@ -41,22 +41,22 @@ a model to create an alternative energy vision than the one provided by
 
 \subsection{How \ac{osier} addresses the ``human dimension''} 
 
-The null result from Arrow's Theorem means there is no single objective or set of objectives
-that can perfectly capture public preferences for energy systems. An \ac{esom} must 
-be used as part of a participatory process. However, \acp{esom} can 
-be more or less easily incorporated in such a process, depending on the \ac{esom} design.
-Designing for greater flexibility and transparency are two ways to make adoption easier.
-\ac{osier} allows for any number of constraints, objectives, and even allows for
-user-defined objectives, a design philosophy consistent with the first principle
-from Elmallah et al. which called for ``place-based'' solutions
-\cite{elmallah_frontlining_2022}. However, place-based solutions require
-authentic engagement and ``quantitative metrics cannot replace on the ground
-work that includes qualitative, community-based approaches in devising policy
-solutions'' \cite{elmallah_frontlining_2022}. While \ac{osier} can stand alone
-as an \ac{esom}, it is likely most effective as part of an iterative,
-participatory, approach as outlined by McGookin et al. 2024
-\cite{mcgookin_advancing_2024}. This approach breaks down the modeling process
-into five distinct parts
+The null result from Arrow's Theorem means there is no single objective or set
+of objectives that can perfectly capture public preferences for energy systems.
+An \ac{esom} must be used as part of a participatory process. However,
+\acp{esom} can be more or less easily incorporated in such a process, depending
+on the \ac{esom} design. Designing for greater flexibility and transparency are
+two ways to make adoption easier. \ac{osier} allows for any number of
+constraints, objectives, and even allows for user-defined objectives, a design
+philosophy consistent with the first principle from Elmallah et al. which called
+for ``place-based'' solutions \cite{elmallah_frontlining_2022}. However,
+place-based solutions require authentic engagement and ``quantitative metrics
+cannot replace on the ground work that includes qualitative, community-based
+approaches in devising policy solutions'' \cite{elmallah_frontlining_2022}.
+While \ac{osier} can stand alone as an \ac{esom}, it is likely most effective as
+part of an iterative, participatory, approach as outlined by McGookin et al.
+2024 \cite{mcgookin_advancing_2024}. This approach breaks down the modeling
+process into five distinct parts
 \begin{enumerate}
     \item Research design,
     \item Model assumptions,
@@ -80,13 +80,15 @@ Although the state of Illinois uses modeling results and hires consultants to
 perform modeling, the responses from interviewees suggest that even more
 transparency in the model data and the models themselves are desired. A public
 comment period does not constitute genuine involvement of a participatory
-process. Creating such a process would align Illinois more closely with the
-energy justice planning principles outlined by Elmallah et al.
-\cite{elmallah_frontlining_2022}. Specifically ``shifting the balance of power
-from existing forms of energy governance.'' Illinois has an opportunity to
-employ participatory modeling to develop robust visions for its energy future.
-To that end, I suggest Illinois create such a process and use open source
-modeling tools whenever possible.
+process. This is because public comment periods occur after the modeling has
+been done and a properly participatory process would include stakeholder
+perspectives throughout the modeling process. Creating such a process would
+align Illinois more closely with the energy justice planning principles outlined
+by Elmallah et al. \cite{elmallah_frontlining_2022}. Specifically ``shifting the
+balance of power from existing forms of energy governance.'' Illinois has an
+opportunity to employ participatory modeling to develop robust visions for its
+energy future. To that end, I suggest that the state of Illinois create such a
+process and use open source modeling tools whenever possible.
 
 \subsection{Model and Data Development}
 Several of the model features requested by the interviewees would be better
@@ -95,11 +97,12 @@ suited by a different modeling paradigm than the one currently provided by
 incentive structures, or time of use rates --- issues related to human behavior
 --- are likely better addressed by \acp{abm}. Questions about energy efficiency
 might be better served by 1) \acp{bem} but also 2) better data about the cost of
-efficiency improvements. \ac{nrel} has a large amount of simulated building-level energy use data along with the performance of various efficiency upgrades
-but no information on cost \cite{wilson_end-use_2022}. \ac{osier} could readily
-represent efficiency as a ``technology'' option, but this would require capital
-cost data on a per kW basis. Some of this data exists but
-the data have large uncertainties \cite{less_cost_2021}.
+efficiency improvements. \ac{nrel} has a large amount of simulated
+building-level energy use data along with the performance of various efficiency
+upgrades but no information on cost \cite{wilson_end-use_2022}. \ac{osier} could
+readily represent efficiency as a ``technology'' option, but this would require
+capital cost data on a per kW basis. Some of this data exists but the data have
+large uncertainties \cite{less_cost_2021}.
 
 
 \subsection{Limitations of this study}
