adds abstract file

--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -119,12 +119,9 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 
 \frontmatter
 
-% \begin{abstract}
-% This is a comprehensive study of caffeine consumption by graduate
-% students at the University of Illinois who are in the very final
-% stages of completing their doctoral degrees. A study group of six
-% hundred doctoral students\ldots.
-% \end{abstract}
+\begin{abstract}
+    \input{01-abstract.tex}
+\end{abstract}
 
 % \begin{dedication}
 % [F]or the kids like me who got ADHD.\\
