--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -1,35 +1,26 @@
 \chapter{Introduction}
-
-% \section{Motivation}
-
-% \textcolor{red}{CO2 emissions}
-
-% \textcolor{red}{Emissions by energy source}
-
-% \section{Research Objectives}
-
-% \section{Reproducing this work}
-% Talk about \texttt{snakemake}, show the DAG... 
+\label{chapter:introduction}
+\input{1-introduction/1-introduction.tex}
 
 \chapter{Literature Review}
 \label{chapter:lit-review}
-% \input{2-literature/20-literature}
+\input{2-literature/20-literature}
 
 \chapter{\acf{osier}}
 \label{chapter:osier}
-% \input{3-osier/30-intro}
+\input{3-osier/30-intro}
 
 \chapter{Benchmark Results}
 \label{chapter:benchmark-results}
-% \input{4-benchmark-results/40-benchmark.tex}
+\input{4-benchmark-results/40-benchmark.tex}
 
 \chapter{Examples with \acs{osier}}
 \label{chapter:examples}
-% \input{5-examples/50-intro.tex}
+\input{5-examples/50-intro.tex}
 
 \chapter{Energy modeling, planning, and justice}
 \label{chapter:communities}
-% \input{7-interviews/70-outline}
+\input{7-interviews/70-outline}
 
 \chapter{Conclusions}
 \label{chapter:conclusions}
