fixes cross references

--- a/docs/3-osier/31-inputs.tex
+++ b/docs/3-osier/31-inputs.tex
@@ -220,7 +220,7 @@ Code listing \ref{listing:user-defined-objective}.
 \subsection{Constraints}
 \label{section:constraints}
 
-Besides the physical constraints defined in Section \ref{section:dispatch},
+Besides the physical constraints defined in Section \ref{section:dispatch_model},
 \ac{osier} does not have any default constraints. This is because each
 additional constraint corresponds to an additional assumption and will affect
 the trade-off analysis that makes \ac{moo} so powerful. However, there are some
