--- a/docs/3-osier/35-limitations.tex
+++ b/docs/3-osier/35-limitations.tex
@@ -26,6 +26,6 @@ and scope.
 Many of these limitations are due to the underlying dispatch model. These limitations could be addressed 
 by coupling \ac{osier}'s genetic algorithm to an external dispatch model, such as \ac{pypsa} or \ac{temoa}.
 Other features, such as geoengineering and environmental interactions, are much more challenging to enclose.
-Avenues of future work are detailed in Section \ref{section:future-work}.
+Avenues of future work are detailed in Section \ref{section:limitations-future-work}.
 
 % This responds to some of Cliff's comments on \ac{osier}.
