--- a/docs/4-benchmark-results/42-1-benchmark-data.tex
+++ b/docs/4-benchmark-results/42-1-benchmark-data.tex
@@ -33,7 +33,7 @@ A single \ac{temoa} run minimizes total system cost as \cite{decarolis_temoa_201
 Each of these terms is amortized over the model time horizon. The decision
 variables include the generation from each technology at time, $t$, and the
 capacity of each technology in year, $y$. The dispatch model deviates slightly
-from the model described in Section \ref{section:dispatch} by making the initial
+from the model described in Section \ref{section:dispatch_model} by making the initial
 storage level for energy storage technologies a decision variable, whereas the
 dispatch model used in this thesis does not optimize initial storage and assumes
 energy storage starts at zero. The detailed formulation of \ac{temoa}'s
