--- a/docs/4-benchmark-results/42-decide-ea.tex
+++ b/docs/4-benchmark-results/42-decide-ea.tex
@@ -1,4 +1,5 @@
 \subsection{Exercise 4: Deciding Among Evolutionary Algorithms}
+\label{section:4-exercise-4}
 
 \ac{osier} allows users to choose among a variety of \ac{moo} methods. This is
 motivated by the desire for flexibility. However, Exercises 5 and 6 use just one
