--- a/docs/4-benchmark-results/45-new-dispatch.tex
+++ b/docs/4-benchmark-results/45-new-dispatch.tex
@@ -1,4 +1,5 @@
 \subsection{Exercise 1: Validating a Simplified Approach}
+\label{section:dispatch_benchmark}
 
 This exercise considers three different cases with different technology mixes.
 The first case includes natural gas and nuclear resources, the second case adds
