--- a/docs/5-examples/51-set-tool.tex
+++ b/docs/5-examples/51-set-tool.tex
@@ -136,10 +136,10 @@ literature refers sometimes refers to these solutions as ``knee'' solutions
 To prevent any metric from dominating the solutions, all data are normalized
 with the $L_\infty$-norm. Due to the implicit assumption that all fuel cycles
 and evaluation groups are mutually exclusive, the complete set of solutions in
-design space is given by the identity matrix of size $40 \times 40$. Since the 
-design space is known \textit{a priori}, the genetic algorithm component of \ac{osier}
-was skipped and the results are simply the non-dominated set (i.e., the Pareto front)
-as calculated by \ac{osier}. 
+design space is given by the identity matrix of size $40 \times 40$. Since the
+design space is known \textit{a priori}, the genetic algorithm component of
+\ac{osier} was skipped and the results are simply the non-dominated set (i.e.,
+the Pareto front) as calculated by \ac{osier}. 
 
 \begin{sidewaystable}[htbp!]
     \centering
@@ -250,5 +250,6 @@ of closed fuel cycles.
 Finally, the data from the Study and the \ac{set} are static. If future studies
 wish to evaluate different metrics associated with these fuel cycles or update
 the data based on new information, new fuel cycle simulations must be run. The
-future work section, Section \ref{section:future-work}, describes how \ac{osier}
-could be used in conjunction with other codes to address this issue. 
+future work section, Section \ref{section:limitations-future-work}, describes
+how \ac{osier} could be used in conjunction with other codes to address this
+issue. 
