--- a/docs/7-interviews/75-markets.tex
+++ b/docs/7-interviews/75-markets.tex
@@ -1,4 +1,5 @@
 \section{Energy Procurement in Illinois}
+\label{section:markets}
 
 This section describes the ways consumers and municipalities procure electricity
 in Illinois. This brief interlude provides essential context for understanding
