minor corrections based on comments from @katyhuff

--- a/docs/01-abstract.tex
+++ b/docs/01-abstract.tex
@@ -33,12 +33,12 @@ search methods automatically sample sub-optimal space. Further, this thesis
 develops a novel algorithm to calculate a subset of maximally different
 solutions within the sub-optimal space to address this uncertainty related to
 unmodeled objectives. By producing multiple solutions, \texttt{Osier} gives
-modellers and decision-makers the tools to meaningfully engage with public
+modelers and decision-makers the tools to meaningfully engage with public
 stakeholders and learn their preferences, thereby attending to issues of
 procedural and recognition justice.
 
 This thesis verified \texttt{Osier}'s suitability for energy modeling problems
-with several experiments. The first set of experiments demonstrate that
+with several \textit{in silico} experiments. The first set of experiments demonstrate that
 \texttt{Osier} produces results that are internally consistent within its suite
 of available methods. The next set of experiments compare \texttt{Osier} to a
 more mature ESOM, \texttt{Temoa}, to verify that \texttt{Osier} produces results
@@ -51,8 +51,8 @@ shows how \texttt{Osier} optimizes a novel objective,
 energy-return-on-investment, for a hypothetical data center. Finally, this
 thesis validates earlier claims of \texttt{Osier}'s usefulness for energy
 planning through a qualitative study of municipal and state-level energy
-planners in Illinois. The results of thirteen expert interviews evince
-enthusiasm for a new tool that can optimize objectives besides cost. However,
+planners in Illinois. The results of thirteen expert interviews demonstrate
+enthusiasm for a new tool that can optimize objectives beyond cost. However,
 this study surfaced structural barriers to ESOM usage at the municipal level
 which must be addressed before ESOMs, like \texttt{Osier}, can be adopted.
 Lastly, I recommend that the state of Illinois develop a participatory process
