--- a/docs/1-introduction/1-introduction.tex
+++ b/docs/1-introduction/1-introduction.tex
@@ -1,10 +1,10 @@
-Climate change produced by greater atmospheric CO$_2$ concentrations
+Climate change produced by growing atmospheric CO$_2$ concentrations
 \cite{kane_atmospheric_1996} from human activity has led to increased exposure
-to hazards worldwide and domestically: increased storm severity, rising sea
-levels, more extreme temperatures, hotter summers, and rising sea levels to name
-a few \cite{reidmiller_fourth_2018}. Data from the Mauna Loa Observatory,
-illustrated by Figure \ref{fig:mauna-loa-co2}, shows the long term upward trend
-of surface level \ac{co2} concentration \cite{kane_atmospheric_1996}.
+to hazards worldwide and domestically: increased storm severity, more extreme
+temperatures, hotter summers, and rising sea levels to name a few
+\cite{reidmiller_fourth_2018}. Data from the Mauna Loa Observatory, illustrated
+by Figure \ref{fig:mauna-loa-co2}, shows the long term upward trend of surface
+level \ac{co2} concentration \cite{kane_atmospheric_1996}.
 \begin{figure}[ht!]
     \centering
     \resizebox{0.9\columnwidth}{!}{\input{figures/01_introduction/mauna-loa-co2.pgf}}
@@ -58,7 +58,7 @@ spatially diffuse and temporally challenging to predict. A class of tools called
 However, while climate change may be the most immediate existential threat to
 society \cite{hickman_climate_2021}, it is a focusing issue that brings
 challenges of equity and disproportional impacts to the fore. These latter
-challenges have been always been concomitant with our energy system, but energy
+challenges have always been concomitant with our energy system, but energy
 system modeling has largely ignored the ways energy systems mediate
 socio-political power alongside transporting electrons and fuel. For example,
 fossil fueled power plants have always been associated with air pollution and
