--- a/docs/2-literature/23-social-movements.tex
+++ b/docs/2-literature/23-social-movements.tex
@@ -192,7 +192,7 @@ mai_electrification_2018}, decarbonizing our electricity production is one of
 the most critical issues to resolving climate change. Therefore, producing
 electricity with zero \acp{ghg} will initiate a cascade of deeper
 decarbonization throughout the economy. However, this will require expanded
-electrical infrastructure to accomodate new energy technologies. Since, energy
+electrical infrastructure to accomodate new energy technologies. Since energy
 production contributes significantly to climate change, and new energy
 infrastructure is required to reduce carbon emissions in other sectors (e.g.
 heat and transportation), accelerating the adoption of clean energy technology
@@ -224,7 +224,7 @@ de_sisternes_value_2016,alzbutas_uncertainty_2012,brook_why_2014,
 epiney_economic_2020,petti_future_2018, patrizio_socially_2020}. While some
 countries are building new nuclear reactors, and the \ac{nrc} just licensed the
 design of the first small modular reactor design from NuScale
-\cite{office_of_nuclear_energy_science_and_technology_nrc_2023}, other places
+\cite{office_of_nuclear_energy_science_and_technology_nrc_2023}, other nations
 are shutting down their operating nuclear plants \cite{johnson_new_2021}. 
 % In the latter cases, places that shut down nuclear plants always saw a
 % subsequent rise in carbon emissions due to greater dependence on natural gas.
@@ -248,7 +248,7 @@ debated in the literature.
 The strength of the technical arguments on both sides of these discussions
 combined with the distinct lack of sufficient policy agendas pursuing any of
 them \cite{roelfsema_taking_2020,hale_assessing_2022}, suggests the existence of
-poorly articulated trade-offs and that technical solutions cannot be assessed
+poorly articulated tradeoffs and that technical solutions cannot be assessed
 from an engineering perspective, alone. Some researchers and policymakers
 disagree on technical grounds, while others disagree on the basis of
 institutional or systemic injustices. There are also differences in values.
