--- a/docs/2-literature/24-justice-esoms.tex
+++ b/docs/2-literature/24-justice-esoms.tex
@@ -112,7 +112,7 @@ users, such as the inflexibility of models to reflect multiple policy options.
 only explicit policy instrument'' \cite{susser_better_2022}. Despite broad
 agreement about the need to incorporate stakeholders the ``process'' of
 modeling, there have been surprisingly limited efforts so far
-\cite{ben_amer_too_2020,johannsen_designing_2021,susser_better_2022} Finally,
+\cite{ben_amer_too_2020,johannsen_designing_2021,susser_better_2022}. Finally,
 it's not clear that perfectly accessible and transparent modeling tools will
 translate to more procedurally just policy-making. The next sections outline
 some methods used to address this challenge.
@@ -122,7 +122,7 @@ some methods used to address this challenge.
 Even if the public could use modeling tools, their testimony may still be
 dismissed due to a `lack of expertise.' However, the public has preferences that
 should be incorporated into decision-making. Additionally, community members are
-frequently able to assess trade-offs when presented with them. \Acf{pve} is one
+frequently able to assess tradeoffs when presented with them. \Acf{pve} is one
 method for translating community preferences into just policy outcomes.
 Researchers in the Netherlands developed this method to enhance democratic
 participation and infuse policies with genuine feedback from constituents
@@ -180,7 +180,7 @@ among stakeholder groups. The benefit to communities found in the review aligns
 with the understanding of energy systems as a ``gathering force'' that can
 produce new polities and social identities \cite{bridge_energy_2018}. Further,
 the review notes that one of the keys for enhancing decision-making at both
-local and national levels ``was the insight into systems thinking and trade-offs
+local and national levels ``was the insight into systems thinking and tradeoffs
 or cause-effect relationships that participants gained from the methods used in
 studies.'' \Ac{mcda}, a class of methods for analyzing tradeoffs in different
 scenarios, was the most popular tool found in the review
@@ -238,7 +238,7 @@ only transport electrons and gas but also mediate socio-political power.
 Therefore this transition must be done equitably in order to avoid entrenching
 further injustices. The existing energy system modeling tools and literature
 routinely ignore the social dimensions of these systems and forego true
-trade-off analysis. Additionally, it's unclear whether improving these modeling
+tradeoff analysis. Additionally, it's unclear whether improving these modeling
 practices will correspond to just energy policy outcomes. This thesis attempts
 to bridge the gap between energy system modeling and energy justice by
 developing a novel framework that allows multiple, and perhaps non-economic,
