--- a/docs/2-literature/27-renewables.tex
+++ b/docs/2-literature/27-renewables.tex
@@ -61,8 +61,10 @@ build anything else?}}
 Renewable energy sources, particularly solar and wind energy, are appealing
 alternatives to fossil fuel sources. Solar and wind energy have fewer
 geographical constraints, compared to hydroelectric and geothermal power
-\cite{lopez_us_2012}. With respect to nuclear energy, solar and wind are similarly safe 
-on a per-unit-energy basis and produce comparable lifecycle carbon emissions
+\cite{lopez_us_2012}. With respect to nuclear energy, solar and wind are
+similarly safe on a per-unit-energy basis and produce comparable lifecycle
+carbon emissions
 \cite{united_nations_economic_commission_for_europe_carbon_2022,sovacool_balancing_2016,
-intergovernmental_panel_on_climate_change_climate_2014}. Contrary to popular belief, 
-solar and wind resources can have \ac{eroi} comparable to coal-fired power plants \cite{murphy_energy_2022}.
+intergovernmental_panel_on_climate_change_climate_2014}. Contrary to popular
+belief, solar and wind resources can have \ac{eroi} comparable to coal-fired
+power plants \cite{murphy_energy_2022}.
