--- a/docs/3-osier/34-mga.tex
+++ b/docs/3-osier/34-mga.tex
@@ -70,7 +70,7 @@ the edges of the sub-optimal space. The tested points are omitted for clarity.
 \subsection{Farthest First Traversal}
 Previous studies emphasized that a key benefit of \ac{mga} is
 obtaining a set of near-optimal solutions that are maximally different in design
-space \cite{decarolis_modelling_2016, yue_review_2018-1}. Instead of
+space \cite{decarolis_modelling_2016,yue_review_2018}. Instead of
 constraining a linear program to guarantee a maximally-different solution set.
 \ac{osier} implements a ``greedy'' search algorithm in decision space to find
 solutions \cite{hochbaum_best_1985}. The algorithm is
