--- a/docs/7-interviews/75-markets.tex
+++ b/docs/7-interviews/75-markets.tex
@@ -28,10 +28,13 @@ enact policies which incentivize desirable generators to come to Illinois.
 
 \begin{figure}[ht!]
     \centering
-    \includegraphics[width=0.9\columnwidth]{figures/07_interview_chapter/illinois-electric-choice.drawio.png}
+    \includegraphics[width=0.9\columnwidth]{figures/07_interview_chapter/illinois-electric-choice.png}
+    % \includegraphics[width=0.9\columnwidth]{figures/07_interview_chapter/illinois-electric-choice.drawio.png}
     % \resizebox{0.75\columnwidth}{!}{\input{figures/07_interview_chapter/illinois-electric-choice.drawio.svg}}
     \caption{A flow chart describing how consumers may procure electricity in
-    Illinois. \textcolor{red}{!! NOT FINAL !!}}
+    Illinois. 
+    % \textcolor{red}{!! NOT FINAL !!}
+    }
     \label{fig:illinois-flow-chart}
 \end{figure}
 
