--- a/pres/02-bucket-01.tex
+++ b/pres/02-bucket-01.tex
@@ -24,13 +24,19 @@
 \begin{frame}
     \frametitle{Verifying the Original Method}
 
-    [Show the osier vs temoa slide ]
+    [Show the osier vs temoa plot]
 
 \end{frame}
 
 \begin{frame}
     \frametitle{Verifying the New Method}
 
-    [Show the osier vs temoa slide ]
+    [Show the dispatch comparison plot ]
 
+\end{frame}
+
+\subsection{N-Dimensional \gls{mga}}
+
+\begin{frame}
+    \frametitle{MGA}
 \end{frame}
