--- a/pres/2025-dotson-defense.tex
+++ b/pres/2025-dotson-defense.tex
@@ -166,6 +166,7 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 }
 
 \input{01-introduction.tex}
+\input{02-bucket-01.tex}
 
 % \input{acks}
 %%--------------------------------%%
