adds some figures to bucket 1

--- a/pres/01-introduction.tex
+++ b/pres/01-introduction.tex
@@ -62,9 +62,15 @@
 \begin{frame}
     \frametitle{How \gls{osier} Works}
 
-    [Show the data flow diagram]
+    \begin{figure}
+        \centering
+        \includegraphics[width=\columnwidth]{../docs/figures/03_osier_chapter/osier_flow.png}
+        \caption{Flow of data into and within \gls{osier}}
+        \label{fig:osier-flow}
+    \end{figure}
+    % [Show the data flow diagram]
 
-    Osier works by leveraging genetic algorithsm... 
+    % Osier works by leveraging genetic algorithsm... 
 \end{frame}
 
 \begin{frame}
@@ -80,5 +86,14 @@
         \end{enumerate}
         \item \boldorange{Validate} \gls{osier}'s usefulness through a 
         multiple-case study of energy decision-making in Illinois.
+    \end{enumerate}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Objectives of this presentation}
+    \begin{enumerate}
+        \item Show the technical improvements to \gls{osier}.
+        \item Demonstrate how \gls{osier} can be used to evaluate nuclear fuel cycle options.
+        \item Share the results from the case study.
     \end{enumerate}
 \end{frame}
