--- a/pres/2025-dotson-defense.tex
+++ b/pres/2025-dotson-defense.tex
@@ -13,7 +13,7 @@
 %\author[short name]{long name}
 \author[Your Name]{Samuel G. Dotson\\Advanced Reactors and Fuel Cycles Group}
 %\date[short date]{long date}
-\date[01.09.2024]{January 9, 2024}
+\date[10.23.2025]{October 23, 2025}
 %\institution[short name]{long name}
 \institute[UIUC]{University of Illinois at Urbana-Champaign}
 
@@ -167,6 +167,9 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 
 \input{01-introduction.tex}
 \input{02-bucket-01.tex}
+\input{03-osier-demonstration.tex}
+\input{04-motivating-interlude.tex}
+\input{05-bucket-02.tex}
 
 % \input{acks}
 %%--------------------------------%%
